--- a/pages-user/cuentaNueva.html
+++ b/pages-user/cuentaNueva.html
@@ -35,22 +35,21 @@
             <h2>Cuenta nueva</h2>
         </div>
         <div class="logIn">
-            <form id="formRegistro">
+            <form id="registerForm">
                 <ul>
-                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="usuario" type="text" required class="text" placeholder="Usuario"></li>
-                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="nombre" type="text" required class="text" placeholder="Nombre"></li>
-                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="apellido" type="text" required class="text" placeholder="Apellido"></li>
-                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="email" type="email" required class="text" placeholder="Correo electrónico"></li>
-                    <li><span class="inicio"><i class="fa-solid fa-key"></i></span><input id="password" type="password" required class="text" placeholder="Contraseña"></li>
-                    <li><button type="button" id="crearCuenta" class="boton">Crear cuenta</button></li>
+                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="firstName" type="text" required class="text" placeholder="Nombre"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="lastName" type="text" required class="text" placeholder="Apellido"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="registerEmail" type="email" required class="text" placeholder="Correo electrónico"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-key"></i></span><input id="registerPassword" type="password" required class="text" placeholder="Contraseña"></li>
+                    <li><button type="submit" class="boton">Crear cuenta</button></li>
                 </ul>
-            </form>            
+            </form>       
         </div>
     </div>
 
 </body>
 
-<script src="../js/cuentas.js" type="module"></script>
+<script src="../js/registrarse.js" type="module"></script>
 
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
