--- a/pages-user/formulario.html
+++ b/pages-user/formulario.html
@@ -33,22 +33,13 @@
             <h2>Inicio de sesión</h2>
         </div>
         <div class="logIn">
-            <form id="login-form">
+            <form id="loginForm">
                 <ul>
-                    <li>
-                        <span class="inicio"><i class="fa-solid fa-user"></i></span>
-                        <input id="email" type="email" required class="text" placeholder="Correo electrónico">
-                    </li>
-                    <li>
-                        <span class="inicio"><i class="fa-solid fa-key"></i></span>
-                        <input id="password" type="password" required class="text" placeholder="Contraseña">
-                    </li>
-                    <li>
-                        <button type="submit" id="login-btn" class="boton">Iniciar sesión</button>
-                    </li>
+                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo electrónico"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-key"></i></span><input id="loginPassword" type="password" required class="text" placeholder="Contraseña"></li>
+                    <li><button type="submit" class="boton">Iniciar Sesión</button></li>
                 </ul>
             </form>
-            
         </div>
         <div class="cuenta_nueva">
             <div class="nueva">
@@ -58,13 +49,13 @@
             </div>
         </div>
     </div>
-    <script src="../js/cuentas.js"></script>
 
 </body>
+<script src="../js/registrarse.js" type="module"></script>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
 </footer>
-</html>
 
 </html>
+
 
