--- a/pages-products/belleza/cejas-pestanias.html
+++ b/pages-products/belleza/cejas-pestanias.html
@@ -26,6 +26,87 @@
             </ul>
         </nav>
     </header>
+    <section id="body-container">
+        <section class="superior">
+            <article class="opciones">
+                <img src="../../img/belleza/cejas-y-pestanas.png" alt="Hijos del Chilaquil" width="260" height="150">
+                <div class="info-cupon">
+                    <img src="../../img/logos-empresas/cejas-pestañas.png" id="miniatura" alt="">
+                    <p>Realza tu Mirada: Lifting de Pestañas Profesional</p>
+                </div>
+                <div class="price">
+                    <h3>$10</h3>
+                    <h4>62% off | Antes $26.25</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                    <button class="comprar">Comprar</button>
+                </div>
+            </article>
+            <article>
+                <h2>Condiciones</h2>
+                <ul>
+                    <li>Cupón válido hasta el 25 de noviembre del 2024</li>
+                    <li>No se aceptan acompañantes</li>
+                    <li>Necesario realizar tu cita en línea en la plataforma de categorias</li>
+                    <li>Seguir medidas de protección por COVID</li>
+                    <li>Debe asistir puntual a tu cita</li>
+                    <li>Presentar el cupón impreso</li>
+                    <li>Recargo de $3.00 en citas de sábado</li>
+                    <li>Solo se puede programar una vez con 48 horas de anticipación al día de su cita</li>
+                    <li>La reprogramación e inasistencia con previo aviso tiene un cargo de $5.00 dólares</li>
+                    <li>Se agregará el 5% de propina sobre el valor del cupón en el establecimiento.</li>
+                    <li>Tempo máximo de espera 10 minutos</li>
+                    <li>Si faltas a tu cita sin previo aviso se dará como cupón canjeado.</li>
+                </ul>
+            </article>
+        </section>
+        <section class="enmedio">
+            <h2>Descripción</h2>
+            <p>
+                Centro especializado cejas y pestañas te espera en una zona exclusiva, con instalaciones modernas, amplias y adecuadas,
+                con sala de espera, estaciones de trabajo distribuidas apropiadamente para mayor confort de sus clientes.
+            </p>
+            <p>
+                Consigue pestañas largas curvas y naturales que duren hasta 8 semanas.
+            </p>
+            <p>
+                El lifting de pestañas alisa, estira y levanta tu pestaña natural desde su base con mucha suavidad ¡sin dañarlas!
+            </p>
+            <p>Lograrás una mirada muy sensual y seductora</p>
+            <ol>
+                <li>
+                    Corte de Cabello: Un buen corte de cabello no solo mejora tu apariencia, sino
+                    que también puede aumentar tu confianza y proyectar una imagen profesional
+                    o fresca, según lo que busques.
+                </li>
+                <li>
+                    Corte de barba: Un recorte con diseño puede resaltar tus rasgos faciales,
+                    mientras que un afeitado completo ofrece una sensación de frescura. Este
+                    servicio asegura que tu barba se vea estilizada y bien mantenida, lo que puede
+                    influir en cómo te perciben los demás y en cómo te sientes contigo mismo.
+                </li>
+                <li>
+                    Pedicure Spa: Cuidar de tus pies es crucial no sólo por razones estéticas, sino
+                    también de salud. El corte y la forma de las uñas evitan problemas como uñas
+                    encarnadas, mientras que el retiro de cutículas y el limado de la planta del pie
+                    elimina durezas y callosidades, mejorando la comodidad al caminar.
+                    La exfoliación, mascarilla hidratante y masaje exclusivo no solo relajan los pies,
+                    sino que también mejoran la circulación y previenen problemas de la piel,
+                    dejándote con una sensación de bienestar total
+                </li>
+            </ol>
+        </section>
+        <section class="inferior">
+            <h2>Información adicional</h2>
+            <ul>
+                <li>Dirección: Colonia San Francisco, calle los Abetos, Pasaje 4, casa 15B15, a una cuadra del distrito 4 de la Alcaldía
+                    de San Salvador, San Salvador.
+                </li>
+                <li>Horarios: Lunes a domingo de 9:30 am - 7:30 pm</li>
+                <li>Teléfono:2223-3990</li>
+                <li>WhatsApp: 6074-1415</li>
+            </ul>
+        </section>
+    </section>
 
 </body>
 <footer>
