--- a/pages-products/comida/bodega del cerdito.html
+++ b/pages-products/comida/bodega del cerdito.html
@@ -10,7 +10,6 @@
     <title>CupónMania</title>
 </head>
 <body>
-    
     <header id="header-container">
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
@@ -26,18 +25,17 @@
             </ul>
         </nav>
     </header>
-
     <section id="body-container">
         <section class="superior">
             <article class="opciones">
-                <img src="../../img/belleza/color-unas.jpeg" alt="barbotas">
+                <img src="../../img/comida/bodega.jpg" alt="barbotas">
                 <div class="info-cupon">
-                    <img src="../../img/logos-empresas/color-uñas.jpg" alt="Logo Barbotas" id="miniatura">
-                    <p>Baño de acrílico o uñas acrílicas + efecto Chrome o Unicornio + Brillo UV</p>
+                    <img src="../../img/logos-empresas/la bodeguita del cerdito.jpeg" alt="" id="miniatura">
+                    <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
                 </div>
                 <div class="price">
-                    <h3>$14.99</h3>
-                    <h4>35% off | Antes $22.99</h4>
+                    <h3>$15</h3>
+                    <h4>25% off | Antes $20</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar">Comprar</button>
                 </div>
@@ -46,42 +44,42 @@
                 <h2>Condiciones</h2>
                 <ul>
                     <li>Cupón válido hasta el 25 de noviembre del 2024.</li>
-                    <li>Cantidad de cupones permitidos por persona: 2</li>
-                    <li>Se atenderá solo bajo cita previa.</li>
-                    <li>Es necesario presentar el cupón impreso.</li>
+                    <li>Válido en restaurante y para llevar</li>
+                    <li>No aplica para días festivos</li>
+                    <li>Todos los días en nuestra sucursal carretera de oro</li>
+                    <li>No aplica para bebidas</li>
+                    <li>Cantidad de cupones permitidos por persona: 3</li>
+                    <li>Es necesario presentar cupón digital o impreso.</li>
                 </ul>
             </article>
         </section>
         <section class="enmedio">
             <h2>Descripción</h2>
-            <p>¿Qué incluye?</p>
+            <p>La Bodeguita del Cerdito</p>
             <ul>
-                <li>
-                    Baño de acrílico o aplicación de uñas acrílicas
-                </li>
-                <li>
-                    Efecto Chrome o Unicornio, según tu preferencia
-                </li>
-                <li>
-                    Aplicación de Brillo UV para mayor durabilidad y brillo
-                </li>
-                <li>
-                    Este servicio esta diseñado para fortalecer y embellecer tus uñas, proporcionando una apariencia glamorosa y resistente.
-                </li>
-                <li>
-                    El baño de acrílico o uñas acrílicacs ofrece una base sólida, mientras que el efecto Chrome o Unicornio añade un toque de elegancia y originalidad.
-                </li>
-                <li>
-                    El brillo UV no solo protege el acabado, sino que también le da un brillo extra, haciendo que tus uñas luzcan impecables por más tiempo.
+                <li>Te ofrece un ambiente familiar</li>
+                <li>Con aire acondicionado</li>
+                <li>Amplio parqueo y un excelente servicio</li>
+                <li>Te ofrece una gran variedad de sabores, te esperamos con nuestro Nuevo Menú en carnes, mariscos, ensaladas o hamburguesas</li>
+                <li>Puedes elegir también entre neustras especialidades
+                    <ul>
+                        <li>Chicharrones</li>
+                        <li>Baby Backs Ribs</li>
+                        <li>Asados</li>
+                        <li>Parrilladas</li>
+                    </ul>
                 </li>
             </ul>
+            <p>Excelente opción para disfrutar con amigos o en familia</p>
+            <p>¡Te esperamos!</p>
         </section>
         <section class="inferior">
             <h2>Información adicional</h2>
             <ul>
-                <li>Sucursales válidas: Frente a Condominio Médico, Local 12 en la Colonia Médica, San Salvador</li>
-                <li>Horarios de atención: Lunes a sábado de 9:00 a.m. - 5:00 p.m. (7 a.m. a 6:00 p.m. con cita previa)</li>
-                <li>Teléfono: 7096-6346</li>
+                <li>Sucursales válidas: Carretera de oro</li>
+                <li>Dirección: Carretera de oro km 14 1/2, Cantón Cabañas, Ciudad Delgado</li>
+                <li>Horarios de atención: Todos los días de 7:00 am a 7:00 pm</li>
+                <li>Teléfono: 7742-3027</li>
             </ul>
         </section>
     </section>
