--- a/pages-products/comida/burritos-university.html
+++ b/pages-products/comida/burritos-university.html
@@ -10,7 +10,6 @@
     <title>CupónMania</title>
 </head>
 <body>
-    
     <header id="header-container">
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
@@ -29,14 +28,14 @@
     <section id="body-container">
         <section class="superior">
             <article class="opciones">
-                <img src="../../img/belleza/adara-masaje.jpeg" alt="monster-burritos">
+                <img src="../../img/comida/box2.jpeg" alt="barbotas">
                 <div class="info-cupon">
-                    <img src="../../img/logos-empresas/adara estética facial.jpeg" alt="" id="miniatura">
-                    <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
+                    <img src="../../img/logos-empresas/burritos-university.jpeg" alt="" id="miniatura">
+                    <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
                 </div>
                 <div class="price">
-                    <h3>$20</h3>
-                    <h4>60% off | Antes $50</h4>
+                    <h3>$13.99</h3>
+                    <h4>42% off | Antes $23.99</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar">Comprar</button>
                 </div>
@@ -44,54 +43,35 @@
             <article>
                 <h2>Condiciones</h2>
                 <ul>
-                    <li>Recibe GRATIS: 1 exfoliación de espalda y brazos</li>
-                    <li>Cupón válido hasta el 25 de noviembre del 2024</li>
-                    <li>Indispensable agendar cita con anticipación.</li>
-                    <li>No valido en días festivos y días de Asueto Nacional</li>
-                    <li>No combinable con otras ofertas y promociones de Adara Estética Facial</li>
-                    <li>Restricciones aplican</li>
+                    <li>Cupón válido hasta el 25 de noviembre del 2024.</li>
                 </ul>
             </article>
         </section>
         <section class="enmedio">
             <h2>Descripción</h2>
+            <p>El banquete incluye:</p>
+            <ul>
+                <li>8 tacos</li>
+                <li>2 burritos o si lo prefieres cambiarlo por 2 tortas</li>
+                <li>2 sodas</li>
+            </ul>
+            <p>Con este Cupón disfrutarás de comida típica mexicana que alcanza para 4 personas en un ambiente familiar, agradable y colorido</p>
             <p>
-                Este completo tratamiento combina una variedad de técnicas y servicios diseñados para aliviar
-                el estrés, calmar la mente y rejuvenecer el cuerpo.
-            </p>
-            <p>¿Qué incluye tu masaje relajante?</p>
-            <ol>
-                <li>Aromaterapia</li>
-                <li>Masaje craneal</li>
-                <li>Masaje facial</li>
-                <li>Masaje ecológico</li>
-                <li>Digito presión</li>
-                <li>Recibe GRATIS una exfoliación de espalda y brazos</li>
-            </ol>
-            <p>
-                Durante tu sesión, disfrutarás de una experiencia sensorial única gracias a nuestra Aromaterapia
-                especialmente seleccionada para inducir la relajación profunda. Además, nuestra terapeuta experta te brindará un reconfortante
-                masaje craneal y facial para liberar la tensión acumulada en estas áreas sensibles.
+                Monster Burritos University es el lugar idóneo para pasarla entre amigos o familia y disfrutar de sus legendarios platillos
+                preparados en el momento que han hecho de este restaurante tan popular.
             </p>
             <p>
-                Para una sensación de completa armonía, nuestro masaje ecológico utiliza técnicas suaves y naturales para aliviar
-                la tensión muscular y mejorar la circulación. La Digitopresión aplicada durante el masaje ayuda a desbloquear los puntos
-                de energía y promover un equilibrio interno.
-            </p>
-            <p>
-                Como un extre de lujo, tu sesión inclute una exfoliación de espalda y brazos, que elimina suavemente las células muertas de la piel,
-                dejándote con una sensación renovada y revitalizada.
+                ¡¡Compra ya tu cupón y disfruta lo antes posible de esta oferta tan sabrosa!!
             </p>
         </section>
         <section class="inferior">
             <h2>Información adicional</h2>
             <ul>
-                <li>Dirección: Urbanización Toluca subponiente, Av. Escarcha, Calle los Bambués, #16, Blvd. Constitución, San Salvador, El Salvador</li>
-                <li>Horarios de atención: Lunes a viernes de 7:00 a.m. - 5:00 p.m. y sábados de 7:00 a.m. - 12 m.d.</li>
-                <li>Teléfono: 7328-0053</li>
+                <li>Sin información adicional</li>
             </ul>
         </section>
     </section>
+
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
