--- a/pages-products/comida/finesterre.html
+++ b/pages-products/comida/finesterre.html
@@ -10,7 +10,6 @@
     <title>CupónMania</title>
 </head>
 <body>
-    
     <header id="header-container">
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
@@ -29,14 +28,14 @@
     <section id="body-container">
         <section class="superior">
             <article class="opciones">
-                <img src="../../img/belleza/adara-masaje.jpeg" alt="monster-burritos">
+                <img src="../../img/comida/finesterre.jpg" alt="barbotas">
                 <div class="info-cupon">
-                    <img src="../../img/logos-empresas/adara estética facial.jpeg" alt="" id="miniatura">
-                    <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
+                    <img src="../../img/logos-empresas/finesterre.jpeg" alt="" id="miniatura">
+                    <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
                 </div>
                 <div class="price">
-                    <h3>$20</h3>
-                    <h4>60% off | Antes $50</h4>
+                    <h3>$18</h3>
+                    <h4>49% off | Antes $35</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar">Comprar</button>
                 </div>
@@ -44,54 +43,43 @@
             <article>
                 <h2>Condiciones</h2>
                 <ul>
-                    <li>Recibe GRATIS: 1 exfoliación de espalda y brazos</li>
-                    <li>Cupón válido hasta el 25 de noviembre del 2024</li>
-                    <li>Indispensable agendar cita con anticipación.</li>
-                    <li>No valido en días festivos y días de Asueto Nacional</li>
-                    <li>No combinable con otras ofertas y promociones de Adara Estética Facial</li>
-                    <li>Restricciones aplican</li>
+                    <li>Cupón válido hasta el 25 de noviembre del 2024.</li>
+                    <li>Se necesita coordinar entre con 24 horas de anticipación como mínimo</li>
+                    <li>Si necesitas tu paella para un día en específico, es necesario reservar con 48 horas de anticipación</li>
+                    <li>Cupón incluye el servicio a domicilio</li>
+                    <li>La entrega es únicamente válida para las siguientes zonas:</li>
+                    <li>Pudes comprar los cupones que desees</li>
+                    <li>Este cupón es únicamente valido con servicio a domicilio</li>
+                    <li>Es necesario presentar cupón digital al momento de la entrega o enviarlo previamente por WhatsApp</li>
+                    <li>Tiempo de espera puede variar según disponibilidad de entregas</li>
                 </ul>
             </article>
         </section>
         <section class="enmedio">
             <h2>Descripción</h2>
+            <p>Cupón incluye:</p>
+            <ul>
+                <li>¡Paella Mixta para 5 personas hasta tu casa!</li>
+            </ul>
+            <p></p>
             <p>
-                Este completo tratamiento combina una variedad de técnicas y servicios diseñados para aliviar
-                el estrés, calmar la mente y rejuvenecer el cuerpo.
+                ¡Restaurante Finesterre te lleva a ti y a tu familia esta deliciosa paella al estilo de España, puedes disfrutar de esta exquisita combinación de Mariscos
+                y arroz con un toque único y especial, no esperes más para solicitarla y disfrutar de nuestros deliciosos platillos de comida Española que tenemos para ti,
+                con un sabor tan delicioso que te hará sentir como en España!
             </p>
-            <p>¿Qué incluye tu masaje relajante?</p>
-            <ol>
-                <li>Aromaterapia</li>
-                <li>Masaje craneal</li>
-                <li>Masaje facial</li>
-                <li>Masaje ecológico</li>
-                <li>Digito presión</li>
-                <li>Recibe GRATIS una exfoliación de espalda y brazos</li>
-            </ol>
-            <p>
-                Durante tu sesión, disfrutarás de una experiencia sensorial única gracias a nuestra Aromaterapia
-                especialmente seleccionada para inducir la relajación profunda. Además, nuestra terapeuta experta te brindará un reconfortante
-                masaje craneal y facial para liberar la tensión acumulada en estas áreas sensibles.
-            </p>
-            <p>
-                Para una sensación de completa armonía, nuestro masaje ecológico utiliza técnicas suaves y naturales para aliviar
-                la tensión muscular y mejorar la circulación. La Digitopresión aplicada durante el masaje ayuda a desbloquear los puntos
-                de energía y promover un equilibrio interno.
-            </p>
-            <p>
-                Como un extre de lujo, tu sesión inclute una exfoliación de espalda y brazos, que elimina suavemente las células muertas de la piel,
-                dejándote con una sensación renovada y revitalizada.
-            </p>
+            <p>¡No te quedes sin esta súper y deliciosa oferta!</p>
         </section>
         <section class="inferior">
             <h2>Información adicional</h2>
             <ul>
-                <li>Dirección: Urbanización Toluca subponiente, Av. Escarcha, Calle los Bambués, #16, Blvd. Constitución, San Salvador, El Salvador</li>
-                <li>Horarios de atención: Lunes a viernes de 7:00 a.m. - 5:00 p.m. y sábados de 7:00 a.m. - 12 m.d.</li>
-                <li>Teléfono: 7328-0053</li>
+                <li>Entregas válidas: Santa Tecla, Merliot, Santa Elena, Antiguo Cuscatlán y la zona metropolitana de San Salvador</li>
+                <li>Horarios de entrega: Todos los días de la semana de 11:30 am a 6 pm</li>
+                <li>Teléfono: 2102-5988</li>
+                <li>WhatsApp: 7590-0889</li>
             </ul>
         </section>
     </section>
+
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
