--- a/pages-products/comida/hijos-del-chilaquil.html
+++ b/pages-products/comida/hijos-del-chilaquil.html
@@ -10,7 +10,6 @@
     <title>CupónMania</title>
 </head>
 <body>
-    
     <header id="header-container">
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
@@ -26,18 +25,17 @@
             </ul>
         </nav>
     </header>
-
     <section id="body-container">
         <section class="superior">
             <article class="opciones">
-                <img src="../../img/belleza/color-unas.jpeg" alt="barbotas">
+                <img src="../../img/comida/hijos-del-chilaquil.jpeg" alt="barbotas">
                 <div class="info-cupon">
-                    <img src="../../img/logos-empresas/color-uñas.jpg" alt="Logo Barbotas" id="miniatura">
-                    <p>Baño de acrílico o uñas acrílicas + efecto Chrome o Unicornio + Brillo UV</p>
+                    <img src="../../img/logos-empresas/hijos-del-chilaquil.png" alt="" id="miniatura">
+                <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
                 </div>
                 <div class="price">
-                    <h3>$14.99</h3>
-                    <h4>35% off | Antes $22.99</h4>
+                    <h3>$15</h3>
+                    <h4>38% off | Antes $24</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar">Comprar</button>
                 </div>
@@ -46,42 +44,28 @@
                 <h2>Condiciones</h2>
                 <ul>
                     <li>Cupón válido hasta el 25 de noviembre del 2024.</li>
-                    <li>Cantidad de cupones permitidos por persona: 2</li>
-                    <li>Se atenderá solo bajo cita previa.</li>
-                    <li>Es necesario presentar el cupón impreso.</li>
+                    <li>Escoge entre: pastor, pollo, cochinita y soya.</li>
+                    <li>Válido en restaurante y para llevar todos los días en sucursal Sultana y Escalón</li>
+                    <li>Dos cupones por mesa</li>
+                    <li>No aplica en días festivos</li>
+                    <li>Indispensable presentar cupón impreso o digital</li>
+                    <li>Propina 10% de la cuenta total</li>
+                    <li>Recargo para llevar $1.50</li>
                 </ul>
             </article>
         </section>
         <section class="enmedio">
             <h2>Descripción</h2>
-            <p>¿Qué incluye?</p>
-            <ul>
-                <li>
-                    Baño de acrílico o aplicación de uñas acrílicas
-                </li>
-                <li>
-                    Efecto Chrome o Unicornio, según tu preferencia
-                </li>
-                <li>
-                    Aplicación de Brillo UV para mayor durabilidad y brillo
-                </li>
-                <li>
-                    Este servicio esta diseñado para fortalecer y embellecer tus uñas, proporcionando una apariencia glamorosa y resistente.
-                </li>
-                <li>
-                    El baño de acrílico o uñas acrílicacs ofrece una base sólida, mientras que el efecto Chrome o Unicornio añade un toque de elegancia y originalidad.
-                </li>
-                <li>
-                    El brillo UV no solo protege el acabado, sino que también le da un brillo extra, haciendo que tus uñas luzcan impecables por más tiempo.
-                </li>
-            </ul>
+            <p>¡¡Combo Hijastros!!</p>
+            <p>Disfruta de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
+            <p>Escoge entre: pastor, pollo, cochinita y soya.</p>
         </section>
         <section class="inferior">
             <h2>Información adicional</h2>
             <ul>
-                <li>Sucursales válidas: Frente a Condominio Médico, Local 12 en la Colonia Médica, San Salvador</li>
-                <li>Horarios de atención: Lunes a sábado de 9:00 a.m. - 5:00 p.m. (7 a.m. a 6:00 p.m. con cita previa)</li>
-                <li>Teléfono: 7096-6346</li>
+                <li>Sucursal válida: La Rivera Plaza, Local 5, Escalón y Plaza Astoria</li>
+                <li>Sucursal válida: Sultana, Local 1, Antiguo Cuscatlán</li>
+                <li>Horarios de atención: Todos los días de 11:30 a.m. a 3 p.m. y 5:30 p.m. a 9:00 p.m.li>
             </ul>
         </section>
     </section>
