--- a/pages-products/comida/las-trajineras.html
+++ b/pages-products/comida/las-trajineras.html
@@ -10,7 +10,6 @@
     <title>CupónMania</title>
 </head>
 <body>
-    
     <header id="header-container">
         <a href="../../index.html"><img src="../../img/CM-Logo.png" alt="Logo-CM" id="logo"></a>
         <nav id="pages">
@@ -29,14 +28,14 @@
     <section id="body-container">
         <section class="superior">
             <article class="opciones">
-                <img src="../../img/belleza/adara-masaje.jpeg" alt="monster-burritos">
+                <img src="../../img/comida/los-trajineros.jpeg" alt="barbotas">
                 <div class="info-cupon">
-                    <img src="../../img/logos-empresas/adara estética facial.jpeg" alt="" id="miniatura">
-                    <p>¡Escapate del Estrés: Masaje Relajante con Masaje Ecológico y Digitopresión, más exfoliación</p>
+                    <img src="../../img/logos-empresas/las-trajineras.png" alt="" id="miniatura">
+                    <p>¡Súper Taquiza Trajinera!</p>
                 </div>
                 <div class="price">
-                    <h3>$20</h3>
-                    <h4>60% off | Antes $50</h4>
+                    <h3>$12</h3>
+                    <h4>48% off | Antes $22.95</h4>
                     <h5>Finaliza en: <span id="bold">10 días</span></h5>
                     <button class="comprar">Comprar</button>
                 </div>
@@ -44,54 +43,39 @@
             <article>
                 <h2>Condiciones</h2>
                 <ul>
-                    <li>Recibe GRATIS: 1 exfoliación de espalda y brazos</li>
-                    <li>Cupón válido hasta el 25 de noviembre del 2024</li>
-                    <li>Indispensable agendar cita con anticipación.</li>
-                    <li>No valido en días festivos y días de Asueto Nacional</li>
-                    <li>No combinable con otras ofertas y promociones de Adara Estética Facial</li>
-                    <li>Restricciones aplican</li>
+                    <li>Cupón válido hasta el 25 de noviembre del 2024.</li>
+                    <li>Válido únicamente para comer en restaurante</li>
+                    <li>Propina del 10%, deberá ser pagada por el monto total de la cuenta</li>
+                    <li>No válido en días festivos y días de asueto nacional</li>
+                    <li>No válido para llevar ni a domicilio</li>
+                    <li>Máximo 2 cupones por mesa</li>
+                    <li>Es indispensable presentar cupón digital o impreso</li>
                 </ul>
             </article>
         </section>
         <section class="enmedio">
             <h2>Descripción</h2>
-            <p>
-                Este completo tratamiento combina una variedad de técnicas y servicios diseñados para aliviar
-                el estrés, calmar la mente y rejuvenecer el cuerpo.
-            </p>
-            <p>¿Qué incluye tu masaje relajante?</p>
+            <p>¡¡Disfruta de una experiencia culinaria inigualable con nuestra oferta especial de Súper Taquiza Trajinera!!</p>
+            <p>Perfecta para compartir con amigos y familia, esta deliciosa oferta incluye todo lo que necesitas para una aútentica fiesta mexicana</p>
+            <p>Nuestra Súper Taquiza Trajinera incluye:</p>
             <ol>
-                <li>Aromaterapia</li>
-                <li>Masaje craneal</li>
-                <li>Masaje facial</li>
-                <li>Masaje ecológico</li>
-                <li>Digito presión</li>
-                <li>Recibe GRATIS una exfoliación de espalda y brazos</li>
+                <li>12 Tortillas Dobles de Maíz con Queso Fundido</li>
+                <li>1 Libra de Carne a Elección</li>
+                <li>3 Caldos de Birria</li>
             </ol>
-            <p>
-                Durante tu sesión, disfrutarás de una experiencia sensorial única gracias a nuestra Aromaterapia
-                especialmente seleccionada para inducir la relajación profunda. Además, nuestra terapeuta experta te brindará un reconfortante
-                masaje craneal y facial para liberar la tensión acumulada en estas áreas sensibles.
-            </p>
-            <p>
-                Para una sensación de completa armonía, nuestro masaje ecológico utiliza técnicas suaves y naturales para aliviar
-                la tensión muscular y mejorar la circulación. La Digitopresión aplicada durante el masaje ayuda a desbloquear los puntos
-                de energía y promover un equilibrio interno.
-            </p>
-            <p>
-                Como un extre de lujo, tu sesión inclute una exfoliación de espalda y brazos, que elimina suavemente las células muertas de la piel,
-                dejándote con una sensación renovada y revitalizada.
-            </p>
+            <p>No pierdas la oportunidad de disfrutar en nuestro restaurante el aútentico sabor mexicano con nuestra Súper Taquiza Trajinera</p>
         </section>
         <section class="inferior">
             <h2>Información adicional</h2>
             <ul>
-                <li>Dirección: Urbanización Toluca subponiente, Av. Escarcha, Calle los Bambués, #16, Blvd. Constitución, San Salvador, El Salvador</li>
-                <li>Horarios de atención: Lunes a viernes de 7:00 a.m. - 5:00 p.m. y sábados de 7:00 a.m. - 12 m.d.</li>
-                <li>Teléfono: 7328-0053</li>
+                <li>Dirección: Col. Miramonte, Av. Sierra Nevada, #914B, San Salvador, San Salvador</li>
+                <li>Horarios de atención: Lunes a viernes de 11:30 am a 3:00 pm y de 5:30 pm a 9:00 pm</li>
+                <li>Horarios de atención: Sábado y Domingo de 11:30 am a 9:00 pm</li>
+                <li>Teléfono: 7757-1638</li>
             </ul>
         </section>
     </section>
+
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
