--- a/pages-products/belleza/misterBro.html
+++ b/pages-products/belleza/misterBro.html
@@ -26,7 +26,80 @@
             </ul>
         </nav>
     </header>
-
+    <section id="body-container">
+        <section class="superior">
+            <article class="opciones">
+                <img src="../../img/belleza/mister-bro.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <div class="info-cupon">
+                    <img src="../../img/logos-empresas/mister-bro.jpeg" id="miniatura" alt="">
+                    <p>Paquete Corte de cabello + Corte de Barba + Pedicure Spa Paga</p>
+                </div>
+                <div class="price">
+                    <h3>$26</h3>
+                    <h4>28% off | Antes $36</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                    <button class="comprar">Comprar</button>
+                </div>
+            </article>
+            <article>
+                <h2>Condiciones</h2>
+                <ul>
+                    <li>Cupón válido hasta el 25 de noviembre del 2024</li>
+                    <li>Cantidad de cupones permitidos por persona: 1</li>
+                    <li>Los servicios no serán transferibles</li>
+                    <li>Puede ser utilizado de lunes a viernes</li>
+                    <li>Fin de semana tendrá un recargo de $3.00</li>
+                    <li>Se atenderá por orden de llegada</li>
+                    <li>Es necesario presentar el cupón digital o impreso. Presentar cupón impreso</li>
+                </ul>
+            </article>
+        </section>
+        <section class="enmedio">
+            <h2>Descripción</h2>
+            <p>
+                Estos servicios son fundamentales para mantener una buena imagen personal y cuidar
+                de tu salud y bienestar, permitiéndote sentirse renovado y seguro en tu día a día.
+            </p>
+            <ol>
+                <li>
+                    Corte de Cabello: Un buen corte de cabello no solo mejora tu apariencia, sino
+                    que también puede aumentar tu confianza y proyectar una imagen profesional
+                    o fresca, según lo que busques.
+                </li>
+                <li>
+                    Corte de barba: Un recorte con diseño puede resaltar tus rasgos faciales,
+                    mientras que un afeitado completo ofrece una sensación de frescura. Este
+                    servicio asegura que tu barba se vea estilizada y bien mantenida, lo que puede
+                    influir en cómo te perciben los demás y en cómo te sientes contigo mismo.
+                </li>
+                <li>
+                    Pedicure Spa: Cuidar de tus pies es crucial no sólo por razones estéticas, sino
+                    también de salud. El corte y la forma de las uñas evitan problemas como uñas
+                    encarnadas, mientras que el retiro de cutículas y el limado de la planta del pie
+                    elimina durezas y callosidades, mejorando la comodidad al caminar.
+                    La exfoliación, mascarilla hidratante y masaje exclusivo no solo relajan los pies,
+                    sino que también mejoran la circulación y previenen problemas de la piel,
+                    dejándote con una sensación de bienestar total
+                </li>
+            </ol>
+            <p>
+                Somos otro nivel en barbería, te brindamos una experiencia completa para quienes
+                buscan un cuidado integral de su imagen y bienestar. Desde que entras, se siente la
+                diferencia: un ambiente moderno y acogedor, diseñado para que te relajes mientras
+                expertos barberos cuidan cada detalle de tu estilo de pies a cabeza.
+            </p>
+        </section>
+        <section class="inferior">
+            <h2>Información adicional</h2>
+            <ul>
+                <li>Dirección: Centro comercial El Encuentro Valle Dulce, Apopa.</li>
+                <li>Horarios: Lunes a domingo de 9:30 am - 7:30 pm</li>
+                <li>Teléfono:2271-2674</li>
+                <li>Facebook: MisterBro Barber Shop</li>
+                <li>Instagram: @mister_bro.sv</li>
+            </ul>
+        </section>
+    </section>
 </body>
 <footer>
     <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
