--- a/pages-user/comida.html
+++ b/pages-user/comida.html
@@ -30,64 +30,75 @@
         <div class="barra">
             <h2>Comida</h2>
         </div>
-        <div class="opciones">
-            <img src="../img/comida/hijos-del-chilaquil.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-            <div class="info-cupon">
-                <img src="../img/logos-empresas/hijos-del-chilaquil.png" alt="">
-                <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
-            </div>
-            <h3>$15</h3>
-            <h4>38% off | Antes $24</h4>
-            <h5>Finaliza en: <span id="bold">10 días</span></h5>
-        </div>
-        <div class="opciones">
-            <img src="../img/comida/box2.jpeg" alt="monster-burritos" width="260" height="150">
-            <p>
+        <a href="../pages-products/comida/hijos-del-chilaquil.html">
+            <div class="opciones">
+                <img src="../img/comida/hijos-del-chilaquil.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
                 <div class="info-cupon">
-                    <img src="../img/logos-empresas/burritos-university.jpeg" alt="">
-                    <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
-                </div>
-                <h3>$13.99</h3>
-                <h4>42% off | Antes $23.99</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
-            </p>
-        </div>
-        <div class="opciones">
-            <img src="../img/comida/los-trajineros.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
-            <p>
-                <div class="info-cupon">
-                    <img src="../img/logos-empresas/las-trajineras.png" alt="">
-                    <p>¡Súper Taquiza Trajinera!</p>
-                </div>
-                <h3>$12</h3>
-                <h4>48% off | Antes $22.95</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
-            </p>
-        </div>
-        <div class="opciones">
-            <img src="../img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150">
-            <p>
-                <div class="info-cupon">
-                    <img src="../img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
-                    <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
+                    <img src="../img/logos-empresas/hijos-del-chilaquil.png" alt="">
+                    <p>Combo Hijastros de 4 tacos + Chilaquiles + Torta o Burrito + 2 bebidas por $15.00</p>
                 </div>
                 <h3>$15</h3>
-                <h4>25% off | Antes $20</h4>
+                <h4>38% off | Antes $24</h4>
                 <h5>Finaliza en: <span id="bold">10 días</span></h5>
-            </p>
-        </div>
-        <div class="opciones">
-            <img src="../img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150">
-            <p>
-                <div class="info-cupon">
-                    <img src="../img/logos-empresas/finesterre.jpeg" alt="">
-                    <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
-                </div>
-                <h3>$18</h3>
-                <h4>49% off | Antes $35</h4>
-                <h5>Finaliza en: <span id="bold">10 días</span></h5>
-            </p>
-        </div>
+            </div>
+        </a>
+
+        <a href="../pages-products/comida/burritos-university.html">
+            <div class="opciones">
+                <img src="../img/comida/box2.jpeg" alt="monster-burritos" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="../img/logos-empresas/burritos-university.jpeg" alt="">
+                        <p>Banquete Mexicano: Elige entre 2 tortas o 2 burritos + 8 tacos + chile toreado + Cebolla asada + 2 bebidas</p>
+                    </div>
+                    <h3>$13.99</h3>
+                    <h4>42% off | Antes $23.99</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                </p>
+            </div>
+        </a>
+        <a href="../pages-products/comida/las-trajineras.html">
+            <div class="opciones">
+                <img src="../img/comida/los-trajineros.jpeg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="../img/logos-empresas/las-trajineras.png" alt="">
+                        <p>¡Súper Taquiza Trajinera!</p>
+                    </div>
+                    <h3>$12</h3>
+                    <h4>48% off | Antes $22.95</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                </p>
+            </div>
+        </a>
+        <a href="../pages-products/comida/bodega del cerdito.html">
+            <div class="opciones">
+                <img src="../img/comida/bodega.jpg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="../img/logos-empresas/la bodeguita del cerdito.jpeg" alt="">
+                        <p>Paga $15.00 en lugar de $20. Consumo de alimentos en todo el menú.</p>
+                    </div>
+                    <h3>$15</h3>
+                    <h4>25% off | Antes $20</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                </p>
+            </div>
+        </a>
+        <a href="../pages-products/comida/finesterre.html">
+            <div class="opciones">
+                <img src="../img/comida/finesterre.jpg" alt="Hijos del Chilaquil" width="260" height="150">
+                <p>
+                    <div class="info-cupon">
+                        <img src="../img/logos-empresas/finesterre.jpeg" alt="">
+                        <p>¡Paella Mixta para 5 personas hasta tu casa! (Camarones, Calamar, Cangrejo, Almejas, Costilla, Carne y Pollo)</p>
+                    </div>
+                    <h3>$18</h3>
+                    <h4>49% off | Antes $35</h4>
+                    <h5>Finaliza en: <span id="bold">10 días</span></h5>
+                </p>
+            </div>
+        </a>
 
     </section>
 
