--- a/LogIn.html
+++ b/LogIn.html
@@ -21,7 +21,7 @@
                     <ul>
                         <li>
                             <span class="inicio"><i class="fa-solid fa-user"></i></span><input 
-                            type="text" required class="text" placeholder="Usuario">
+                            type="text" required class="text" placeholder="Correo electrónico">
                         </li>
                         <li>
                             <span class="inicio"><i class="fa-solid fa-key"></i></span><input 
