--- a/vendedor/pages/addproducto.html
+++ b/vendedor/pages/addproducto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../index.css">
-    <link rel="stylesheet" href="../../css/categorias.css">
+    <link rel="stylesheet" href="../../css/formulario.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="../../img/cupon-estrella.png" type="image/x-icon">
 
@@ -22,5 +22,24 @@
             </ul>
         </nav>
     </header>
+
+    <div class="formulario">
+        <div class="head">
+            <h2>Agregar Producto</h2>
+        </div>
+        <div class="logIn">
+            <form id="loginForm">
+                <ul>
+                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="loginEmail" type="text" required class="text" placeholder="Nombre del Producto"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="loginDescripcion" type="text" required class="text" placeholder="Descripción"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-house"></i></span><input id="loginDireccion" type="number" required class="text" placeholder="Precio"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Categoría"></li>
+                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo Electronico"></li>
+                    <li><button type="submit" class="boton">Guardar cambios</button></li>
+                </ul>
+            </form>
+        </div>
+    </div>
+
 </body>
 </html>
