--- a/crearCuentaVendedor.html
+++ b/crearCuentaVendedor.html
@@ -27,7 +27,7 @@
                         <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Teléfono de Contacto"></li>
                         <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo Electronico"></li>
                         <li><span class="inicio"><i class="fa-solid fa-key"></i></span><input id="loginPassword" type="password" required class="text" placeholder="Contraseña"></li>
-                        <li><button type="submit" class="boton">Crear cuenta</button></li>
+                        <li><button type="submit" class="boton"><a href="vendedor/index.html"></a>Crear cuenta</button></li>
                     </ul>
                 </form>
             </div>
