--- a/vendedor/pages/addproducto.html
+++ b/vendedor/pages/addproducto.html
@@ -34,12 +34,16 @@
                     <li><span class="inicio"><i class="fa-solid fa-user"></i></span><input id="loginDescripcion" type="text" required class="text" placeholder="Descripción"></li>
                     <li><span class="inicio"><i class="fa-solid fa-house"></i></span><input id="loginDireccion" type="number" required class="text" placeholder="Precio"></li>
                     <li><span class="inicio"><i class="fa-solid fa-phone"></i></span><input id="loginTelefono" type="number" required class="text" placeholder="Categoría"></li>
-                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="Correo Electronico"></li>
-                    <li><button type="submit" class="boton">Guardar cambios</button></li>
+                    <li><span class="inicio"><i class="fa-solid fa-envelope"></i></span><input id="loginEmail" type="email" required class="text" placeholder="URL de la imagen"></li>
+                    <li><button type="submit" class="boton">Guardar producto</button></li>
                 </ul>
             </form>
         </div>
     </div>
 
 </body>
+
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
