--- a/vendedor/pages/perfilVendedor.html
+++ b/vendedor/pages/perfilVendedor.html
@@ -40,4 +40,7 @@
         </div>
     </div>
 </body>
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
