--- a/vendedor/index.html
+++ b/vendedor/index.html
@@ -23,4 +23,7 @@
         </nav>
     </header>
 </body>
+<footer>
+    <h3>©2024 CupónMania S.A. de C.V. Todos los derechos reservados</h3>
+</footer>
 </html>
